# ideas

./: .gitmodules  README.md  meson.build  meson.options
bindings/: meson.build
data/: com.ellenoireq.ideas.desktop.in  com.ellenoireq.ideas.gschema.xml  com.ellenoireq.ideas.metainfo.xml.in  com.ellenoireq.ideas.service.in  meson.build  style.css
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  ideas.gresource.xml  main.vala  meson.build  shortcuts-dialog.blp  window.blp  window.vala
src/utils/: environment.vala  version.vala
